Added username input field handle function to chatbar.jsx

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <div id="react-root"></div>
+  <script src="/socket/socket.io.js"></script>
   <script src="/build/bundle.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </body>
 </html>
